<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_metrics_collector_examples</name>
  <version>0.0.0</version>
  <description>Examples using the system_metrics_collector package</description>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>demo_nodes_cpp</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>system_metrics_collector</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
