<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_metrics_collector</name>
  <version>0.0.0</version>
  <description>Node and aggregation utilities to measure and publish system metrics.</description>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>metrics_statistics_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rcpputils</build_depend>

  <exec_depend>metrics_statistics_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <!--Required for e2e test file-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <!--Required for example launch file-->
  <exec_depend>demo_nodes_cpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>class_loader</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_components</test_depend>
  <test_depend>rcpputils</test_depend>
  <test_depend>rcutils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
